# fitboddy-tenant-service

./: Dockerfile  README.md  alembic.ini  pyproject.toml
.github/workflows/: ci.yml  publish-image-ghcr.yml
alembic/: env.py
alembic/versions/: 0001_create_tenant_tables.py
lib/application/: commands.py  config.py  db.py  errors.py  gateways.py  migrator.py  models.py  repositories.py  runtime.py  use_cases.py
lib/domain/: entities.py
lib/presentation/http/: error_translator.py  main.py  request_factory.py  response_factory.py  schemas.py
lib/presentation/http/handlers/: tenant_handler.py
lib/presentation/http/routes/: system_routes.py  tenant_routes.py
tests/: conftest.py
tests/unit/: test_http_endpoints.py
